# robo_drill

./: .gitignore  192.168.1-metadata.json  192.168.13-metadata.json  CMakeLists.txt  README.md  package.xml  robo_drill_behavior_plugin.xml
action/: BackOutFromObstacle.action  RetractArmFromObstacle.action
config/: arm_only_controllers.yaml  camera_rear_params.yaml  concatenate_params.yaml  diffdrive_controllers.yaml  explore_params.yaml  general_params.yaml  general_params_omni.yaml  gz_bridge.yaml  mapper_params_online_async.yaml  mobile_manipulator_controllers.yaml  nav2_params.yaml  nav2_params_omni.yaml  navigate_to_pose_w_replanning_and_recovery.xml  oak_params.yaml  robot_body_filter.yaml  rtab_ekf_params.yaml  test_goal_planned_arm_prefix.yaml  wall_detection_params.yaml
config/behavior_trees/: navigate_to_pose_w_backout_recovery.xml  robo_drill_bt_nodes.xml
docs/: UI_GUIDE.md
hardware/: column_hw_interface_plugin.xml  robodrill_hw_interface_plugin.xml
hardware/include/robodrill_hw_interface/: column_hardware_interface.hpp  robodrill_hardware_interface.hpp  visibility_control.h  wheel.hpp
hardware/src/: column_hardware_interface.cpp  robodrill_hardware_interface.cpp
include/robo_drill/: back_out_from_obstacle.hpp  back_out_from_obstacle_bt_node.hpp  column_control.hpp  costmap_client.h  costmap_tools.h  explore.h  frontier_search.h  pointcloud_concatenate.hpp  retract_arm_from_obstacle.hpp  retract_arm_from_obstacle_bt_node.hpp
launch/: amcl_launch.py  exploration.launch.py  global_exploration.launch.py  hybrid_simulation.launch.py  joy_control.launch.py  manipulator.launch.py  map.launch.py  mapping_2d.launch.py  mapping_3d.launch.py  mapping_stack.launch.py  move_robot.launch.py  navigation_launch.py  online_async.launch.py  platform.launch.py  play_bag.launch.py  pointcloud_concatenate.launch.py  pokeye_mobile_manipulator.launch.py  robot.launch.py  robot_body_filter.launch.py  robot_state_publisher.launch.py  rtabmap.launch.py  sensors.launch.py  sim.launch.py  view_robot.launch.py  wall_detection.launch.py  yolo_object_detection.launch.py
maps/: blank_map.pgm  blank_map.yaml
msg/: Wall.msg  WallArray.msg
python_nodes/: cancel_goals.py  dynamic_footprint_publisher.py  follow_path.py  follow_poses.py  goal_pose_publisher.py  goal_router.py  odom_plot.py  republish_lidar.py  start_pose_publisher.py  turret_footprint_broadcaster.py  turret_joy.py  yolo_object_detection.py
rgb_detections/: detected_walls.yaml  detections_20260626_145903.csv
robo_drill_description/description/: imu.xacro  mobile_manipulator.urdf.xacro  oak_camera.xacro  oliwall_base.urdf  oliwall_base_links.xacro  os-dome.xacro  pokeye_base.urdf  pokeye_base_links.xacro  realsense_camera.xacro  robo_drill.urdf.xacro  robo_drill_colors.xacro  robo_drill_core.xacro  robo_drill_inertias.xacro  robodrill_diffdrive_control.xacro  sick_multiscan.xacro
robo_drill_description/meshes/: base.STL  column_link.STL  d_e_stage_1_v3.stl  d_e_stage_2_v3.stl  d_e_stage_3_v3.stl  d_p_estructura_redesing.stl  left_wheel.STL  rotatory-RL_D_50_102_48_01035.stl  sick.STL  ultrasonic.STL
rviz/: mapping_2D.rviz  mapping_3D.rviz  mock_hardware.rviz  navigation.rviz  robo_drill.rviz  robot_view.rviz  view_robot.rviz
src/: back_out_from_obstacle.cpp  back_out_from_obstacle_bt_node.cpp  column_control.cpp  costmap_client.cpp  exploration_base.h  exploration_closest_frontier.cpp  explore.cpp  find_frontiers.cpp  frontier_search.cpp  lidar_fov_filter.cpp  pointcloud_concatenate.cpp  pointcloud_concatenate_node.cpp  retract_arm_from_obstacle.cpp  retract_arm_from_obstacle_bt_node.cpp  robot_body_filter_node.cpp  wall_aggregator_node.cpp  wall_detection_node.cpp
srv/: SetPosition.srv
ui/: UI.py
ui/UI_utils/: qtermwidget_wrapper.py
utils/: imu_to_yaw.py
worlds/agropolis/: agropolis.world  generador de agropoplis.py
worlds/agropolis/models/pasillo/: model.config
worlds/agropolis/models/vinya/meshes/: vinya.dae
worlds/castelldefels_indoors_empty/: aruco_marker_0.material  aruco_marker_1.material  aruco_marker_2.material  aruco_marker_3.material  aruco_marker_4.material  aruco_marker_5.material  castelldefels_indoors_empty.sdf  castelldefels_indoors_empty.world  generate_floor_plan.py
worlds/castelldefels_indoors_empty/models/column/: model.config  model.sdf
worlds/castelldefels_indoors_empty/models/column/meshes/: column.dae
worlds/castelldefels_indoors_empty/models/table/: model.sdf
worlds/castelldefels_indoors_empty/models/table/meshes/: table.dae
worlds/castelldefels_indoors_empty/models/wall/: model.sdf
worlds/castelldefels_indoors_empty/models/wall/meshes/: wall.dae
worlds/castelldefels_vineyard/: castelldefels_vineyard.py  castelldefels_vineyard.world
worlds/castelldefels_vineyard/models/palo/: model.config  model.sdf
worlds/castelldefels_vineyard/models/palo/meshes/: palo.dae
worlds/castelldefels_vineyard/models/pasillo/: model.sdf
worlds/castelldefels_vineyard/models/pasillo/meshes/: pasillo.dae
worlds/castelldefels_vineyard/models/vinya/: model.config  model.sdf
worlds/corridor/: corridor.world
worlds/sonoma_raceway/: sonoma_raceway.world
worlds/warehouse/: warehouse.world
